<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ritambhara.locateStuff.MainActivity" 
	android:orientation="vertical"
	android:overScrollMode="ifContentScrolls"
	android:scrollbarStyle="insideOverlay"
	android:scrollbars="vertical">
    
    <LinearLayout 
        android:id="@+id/saveBtnContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        
	    <EditText android:id="@+id/titleTxt"
	        android:layout_width="0dip"
	        android:layout_weight="0.7"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:hint="@string/title_txt_help"
	        android:padding="7dp"
	        android:background="@drawable/textbox_default"
	        android:singleLine="true"
	        android:maxLength="95"
	        android:layout_marginRight="15dp"/>
	    
	    <Button
            android:id="@+id/btnSaveStuff"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:minWidth="100dp"
            android:textColor="@color/white"
            android:text="@string/save_btn_txt"
            android:textSize="12sp"
            android:textStyle="bold" 
            android:onClick="saveBtnClickHandler"/>
	    
    </LinearLayout>
        
   <EditText android:id="@+id/descriptionTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
	    android:hint="@string/description_txt_help"
        android:layout_below="@+id/saveBtnContainer"
        android:layout_marginTop="10dp"
        android:padding="7dp"
        android:background="@drawable/textbox_default"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:maxLength="1020"/>

    <!-- Stuff Image -->
    <RelativeLayout 
        android:id="@+id/addStuffImageContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
   	    android:layout_below="@+id/descriptionTxt"
        android:layout_alignParentLeft="true" >
    
        <!--  Top separator -->
        <LinearLayout 
            android:id="@+id/addStuffImageTopDivider"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical">
            
            <View 
	           android:id="@+id/addStuffImageTopDivider1"
	           android:layout_width="10dp"
	           android:layout_marginTop="2dp"
	           android:layout_height="1dp"
	           android:layout_gravity="center_vertical"
	           android:background="@color/stuff_item_separator"/>
            
            <TextView android:id="@+id/addStuffImageTopDivider2"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textSize="12sp"
		        android:textColor="@color/title_descr_color"
		        android:singleLine="true"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="2dp"
		        android:layout_gravity="center_vertical"
		        android:text="@string/add_image_separator_title"/>
            
            <View 
	           android:id="@+id/addStuffImageTopDivider3"
	           android:layout_width="fill_parent"
	           android:layout_marginTop="2dp"
	           android:layout_height="1dp"
	           android:layout_gravity="center_vertical"
	           android:background="@color/stuff_item_separator"/>
            
        </LinearLayout>
        
	   <ImageView 
	   	    android:id="@+id/stuffImage"
	   	    android:layout_height="@dimen/STUFF_IMAGE_HEIGHT"
	   	    android:layout_width="@dimen/STUFF_IMAGE_WIDTH"
	   	    android:scaleType="centerCrop"
	   	    android:layout_marginLeft="15dp"
	   	    android:onClick="onImageClick"
	   	    android:layout_below="@+id/addStuffImageTopDivider"
			android:layout_alignParentLeft="true"/>
	
	   <Button
            android:id="@+id/btnImageCapture"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_unacitivy"
            android:minWidth="100dp"
            android:textColor="@color/white"
            android:text="@string/add_image_text"
            android:textSize="12sp"
            android:layout_marginRight="10dp"
            android:onClick="captureImageBtnHandler"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/addStuffImageTopDivider"
            android:gravity="center"
            android:textStyle="bold" />
	</RelativeLayout>
   
   <!-- Stuff Audio -->
   <RelativeLayout 
        android:id="@+id/recordBtnContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addStuffImageContainer"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">
       
       <!--  Top separator -->
        <LinearLayout 
            android:id="@+id/addStuffAudioTopDivider"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical">
            
            <View 
	           android:id="@+id/addStuffAudioTopDivider1"
	           android:layout_width="10dp"
	           android:layout_marginTop="2dp"
	           android:layout_height="1dp"
	           android:layout_gravity="center_vertical"
	           android:background="@color/stuff_item_separator"/>
            
            <TextView android:id="@+id/addStuffAudioTopDivider2"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textSize="12sp"
		        android:textColor="@color/title_descr_color"
		        android:singleLine="true"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="2dp"
		        android:layout_gravity="center_vertical"
		        android:text="@string/add_audio_separator_title"/>
            
            <View 
	           android:id="@+id/addStuffAudioTopDivider3"
	           android:layout_width="fill_parent"
	           android:layout_marginTop="2dp"
	           android:layout_height="1dp"
	           android:layout_gravity="center_vertical"
	           android:background="@color/stuff_item_separator"/>
            
        </LinearLayout>
        
        <LinearLayout 
			android:layout_height="@dimen/STUFF_IMAGE_HEIGHT"
	   	    android:layout_width="@dimen/STUFF_IMAGE_WIDTH"
            android:layout_below="@+id/addStuffAudioTopDivider"
            android:background="@color/audio_btn_background"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">
            
            <ImageView 
		   	    android:id="@+id/stuffItemAudioImage"
		   	    android:layout_height="60dp"
		   	    android:layout_width="60dp"
		   	    android:scaleType="fitXY"
		   	    android:layout_gravity="center"
		   	    android:layout_marginTop="15dp"
		   	    android:onClick="onPlayAudioClick"
	   	    />
            
            <TextView android:id="@+id/stuffItemNoAudioText"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textSize="12sp"
		        android:textColor="@color/title_descr_color"
		        android:singleLine="true"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/no_audio_txt"
		        android:layout_marginTop="10dp"
		        android:visibility="visible"/>
        </LinearLayout>
       
       
	    <Button
            android:id="@+id/btnRecordAudio"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_unacitivy"
            android:gravity="center"
            android:minWidth="100dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/add_audio_text"
            android:textSize="12sp"
            android:onClick="recordAudioBtnHandler"
            android:textStyle="bold" 
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/addStuffAudioTopDivider"
            android:layout_marginRight="10dp"/>
	    
    </RelativeLayout>
   
   <!-- Background Color Picker -->
   <RelativeLayout 
        android:id="@+id/bgColorContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recordBtnContainer"
        android:layout_marginTop="0dp">
   
       <!--  Top separator -->
        <LinearLayout 
            android:id="@+id/backgroundColorTopDivider"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical">
            
            <View 
	           android:id="@+id/backgroundColorTopDivider1"
	           android:layout_width="10dp"
	           android:layout_marginTop="2dp"
	           android:layout_height="1dp"
	           android:layout_gravity="center_vertical"
	           android:background="@color/stuff_item_separator"/>
            
            <TextView android:id="@+id/backgroundColorTopDivider2"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textSize="12sp"
		        android:textColor="@color/title_descr_color"
		        android:singleLine="true"
		        android:layout_marginLeft="2dp"
		        android:layout_marginRight="2dp"
		        android:layout_gravity="center_vertical"
		        android:text="@string/background_color_separator_title"/>
            
            <View 
	           android:id="@+id/backgroundColorTopDivider3"
	           android:layout_width="fill_parent"
	           android:layout_marginTop="2dp"
	           android:layout_height="1dp"
	           android:layout_gravity="center_vertical"
	           android:background="@color/stuff_item_separator"/>
            
        </LinearLayout>
        
       <View 
           android:id="@+id/backgroundColor"
           android:layout_height="@dimen/STUFF_IMAGE_HEIGHT"
	   	    android:layout_width="@dimen/STUFF_IMAGE_WIDTH"
           android:background="@drawable/color_box"
           android:layout_below="@+id/backgroundColorTopDivider"
           android:layout_alignParentLeft="true"
           android:layout_marginLeft="15dp"
           />
       
      <ImageView 
	        android:id="@+id/btnColorPicker"
	        android:layout_width="30dp"
	        android:layout_height="30dp"
	        android:clickable="true"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/color_picker"
	        android:layout_below="@+id/backgroundColorTopDivider"
	        android:layout_marginRight="10dp"
	        android:layout_alignParentRight="true"
	        />
   </RelativeLayout>
</RelativeLayout>
